--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
@@ -39,7 +39,7 @@
     color: white;
 }
 
-.BuildControl .Less:hover, .BuildControl. .Less:active {
+.BuildControl .Less:hover, .BuildControl .Less:active {
     background-color: #daa972;
     color: white;
 }
