--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
@@ -23,6 +23,12 @@
     cursor: default;
 }
 
+.BuildControl button:hover:disabled {
+    background-color: #AC9980;
+    color: #ccc;
+    cursor: not-allowed;
+}
+
 .label {
     padding: 10px;
     font-weight: bold;
